Make `testSelectToRoutedRequestByPlanner` faster
The condition that the columns must be `message, pk_col` got invalid due
to our change to keep the columns in the order as they are in the CREATE
TABLE statement.

Due to that the `awaitBusy` block never succeeded and also didn't cause a
test failure due to the condition not being an assertion.